--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,26 +8,39 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: windows-latest 
+
+    env:
+      Solution_Name: Opjion.sln
+      Project_Path: Opjion\Opjion.csproj
+      Test_Project_Path: Opjion.Tests\Opjion.Tests.csproj
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '9.0.x' # Use your target .NET version
 
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v2
+
     - name: Restore dependencies
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build $env:Project_Path --configuration Release --no-restore
+
+    - name: Test
+      run: dotnet test $env:Test_Project_Path
 
     - name: Pack
-      run: dotnet pack --configuration Release --no-build --output ./nupkg
+      run: dotnet pack $env:Project_Path --configuration Release --no-build --output ./nupkg
 
     - name: Push to NuGet
-      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push ./Opjion/nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
